# minos-computing.github.io

./: contacts.html  github.html  index.html  team.html  tutorials.html
tutorials/ics22/: ics22.html
tutorials/ppopp21/: ppopp21.html
tutorials/ppopp21/code/20 handson/: example3.c  gemmN.cl  utils.c  utils.h
tutorials/ppopp21/code/30 multi_gpu/BFS/: BFS.cpp  BFS_modified.cpp  CMakeLists.txt  Readme.md  utils.cpp  utils.h
tutorials/ppopp21/code/40 nvdla/: Makefile  Readme.md
tutorials/ppopp21/code/BFS/: OptionParser.cpp  Readme.md
tutorials/ppopp21/handson/code/: example1.c  example2.c  tc.c
tutorials/ppopp21/multi_gpu/code/BFS/: main.cpp
tutorials/ppopp21/nvdla/: Makefile  Readme.md  launch_mcl_sched.sh  nvdla.c  nvdla_test  run_nvdla_emulator.exp  start_nvdla_emulator.sh
tutorials/ppopp21/nvdla/code/: Readme.md  launch_mcl_sched.sh  nvdla.c  run_nvdla_emulator.exp  run_nvdla_test.sh
tutorials/ppopp22/: ppopp22.html
tutorials/ppopp22/code/20 handson/: example1.c  example3  matrixMul.cl
tutorials/ppopp22/code/30 fpga/mcl_ccsd/: Makefile  description.json
tutorials/ppopp22/code/30 fpga/mcl_ccsd.tmp/: utils.mk
tutorials/ppopp22/code/40 miniMD/miniMD_MCL/: Makefile  Makefile.pocl  atom.cpp  comm.cpp  comm.h  force_kernel.h  input.cpp  integrate.cpp  integrate.h  integrate_kernel.h  ljs.cpp  output.cpp  (+4 more)
tutorials/ppopp23/: ppopp23.html
tutorials/ppopp23/code/20 handson/: example1  example2  example2.c  example3.c
tutorials/ppopp23/code/40 nvdla/: nvdla.toml  start_nvdla_emulator.sh
tutorials/ppopp23/nvdla/code/: Readme.md  nvdla.c  nvdla.yaml
(+47 files in other folders)
